--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ body, html {
     z-index: 1;
 }
 .bg3 {
-    background-image: url(images/handa_civic.jpg);
+    background-image: url(images/porsche.jpg);
     top: 2000px;
     min-height: 900px;
     z-index: 2;
